[gd_scene load_steps=55 format=2]

[ext_resource path="res://scenes/characters/player/Player.gd" type="Script" id=1]
[ext_resource path="res://scenes/characters/player/PlayerStates.gd" type="Script" id=2]
[ext_resource path="res://assets/characters/player/player_walk_right.png" type="Texture" id=3]
[ext_resource path="res://assets/characters/player/player_walk_down.png" type="Texture" id=4]
[ext_resource path="res://assets/characters/player/player_walk_up.png" type="Texture" id=5]
[ext_resource path="res://scenes/characters/SoftCollision.tscn" type="PackedScene" id=6]
[ext_resource path="res://utils/MultiAudio.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/sfx/ice_step_2.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sfx/ice_step_4.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/sfx/ice_step_1.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/sfx/pick_swing_2.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/sfx/pick_swing_1.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/sfx/iceball throw.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/sfx/water_splash.wav" type="AudioStream" id=14]
[ext_resource path="res://assets/sfx/water_emerge.wav" type="AudioStream" id=15]
[ext_resource path="res://assets/characters/player/Icepick1.png" type="Texture" id=16]
[ext_resource path="res://assets/characters/player/snow_machine.png" type="Texture" id=17]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec4 hit_color : hint_color = vec4(1.0, 1.0, 1.0, 1.0);
uniform float hit_strength : hint_range(0.0,1.0) = 0.0;

void fragment() {
	vec4 custom_color = texture(TEXTURE, UV);
	custom_color.rgb = mix(custom_color.rgb, hit_color.rgb, hit_strength);
	COLOR = custom_color;
}"

[sub_resource type="ShaderMaterial" id=32]
shader = SubResource( 1 )
shader_param/hit_color = Color( 0.74902, 0.14902, 0.317647, 1 )
shader_param/hit_strength = 0.0

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 5 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 5 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 27 ) ],
"loop": false,
"name": "idle_up",
"speed": 5.0
}, {
"frames": [ SubResource( 29 ) ],
"loop": false,
"name": "idle_down",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 11 ) ],
"loop": true,
"name": "walk_down",
"speed": 10.0
}, {
"frames": [ SubResource( 28 ) ],
"loop": false,
"name": "idle_right",
"speed": 5.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 19 ) ],
"loop": true,
"name": "walk_up",
"speed": 10.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 3 ) ],
"loop": true,
"name": "walk_right",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=30]
extents = Vector2( 10, 15 )

[sub_resource type="RectangleShape2D" id=33]
extents = Vector2( 5, 2.5 )

[sub_resource type="RectangleShape2D" id=31]
extents = Vector2( 7.5, 4.5 )

[sub_resource type="AudioStreamRandomPitch" id=34]

[sub_resource type="AudioStreamRandomPitch" id=35]

[sub_resource type="AudioStreamRandomPitch" id=36]
audio_stream = ExtResource( 13 )

[sub_resource type="AudioStreamRandomPitch" id=37]
audio_stream = ExtResource( 14 )

[node name="Player" type="KinematicBody2D" groups=["drownable", "player"]]
collision_layer = 0
script = ExtResource( 1 )

[node name="YSort" type="YSort" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="YSort"]
material = SubResource( 32 )
position = Vector2( 0, -8 )
frames = SubResource( 2 )
animation = "idle_down"
offset = Vector2( 0, -8 )

[node name="Pick" type="Sprite" parent="YSort"]
visible = false
rotation = 1.5708
texture = ExtResource( 16 )
offset = Vector2( 1, -15 )

[node name="SnowMachine" type="Sprite" parent="YSort"]
visible = false
texture = ExtResource( 17 )
offset = Vector2( -1, -3 )

[node name="ShootPos" type="Position2D" parent="YSort/SnowMachine"]
position = Vector2( 0, -10 )

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2( 0, -9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 30 )

[node name="PlayerStates" type="Node" parent="."]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2.5 )
shape = SubResource( 33 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="MeleeTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="SoftCollision" parent="." instance=ExtResource( 6 )]
push_acc = 400
friction = 800

[node name="CollisionShape2D" type="CollisionShape2D" parent="SoftCollision"]
position = Vector2( 0, -2.5 )
shape = SubResource( 31 )

[node name="HitFlashTween" type="Tween" parent="."]

[node name="StepSFX" parent="." instance=ExtResource( 7 )]
stream = SubResource( 34 )
audio = [ ExtResource( 10 ), ExtResource( 8 ), ExtResource( 9 ) ]

[node name="PickSwingSFX" parent="." instance=ExtResource( 7 )]
stream = SubResource( 35 )
audio = [ ExtResource( 12 ), ExtResource( 11 ) ]

[node name="IceShotSFX" type="AudioStreamPlayer" parent="."]
stream = SubResource( 36 )
bus = "SFX"

[node name="SplashSFX" type="AudioStreamPlayer" parent="."]
stream = SubResource( 37 )
bus = "SFX"

[node name="EmergeSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
bus = "SFX"

[node name="SwingTween" type="Tween" parent="."]

[node name="SnowMachineTween" type="Tween" parent="."]

[connection signal="frame_changed" from="YSort/AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="area_exited" from="Hitbox" to="." method="_on_Hitbox_area_exited"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
